--- a/static/style.css
+++ b/static/style.css
@@ -62,7 +62,7 @@ button {
 }
 
 #submit-login {
-    background: #28a745;
+    background: #9DC08B;
     color: white;
     border: none;
 }
@@ -73,6 +73,13 @@ button {
     border: none;
 }
 
+/*Logout style*/
+
+#logout-btn {
+    background: #dc3545;
+    color: white;
+    border: none;
+}
 
 /* Search, Save, and Games buttons */
 .main-btn {
