--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,9 +16,13 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
 
-            <button type="submit">Sign Up</button>
+            <button type="submit" id="signup-button">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="{{ url_for('index') }}">Log in</a></p>
+        <p>Already have an account?
+            <button type="button" id="login-button" onclick="window.location.href='{{ url_for('index') }}'">
+                Log in
+            </button>
+        </p>
     </div>
 </body>
 </html>
