add filter by tag on the quiz

--- a/static/game.css
+++ b/static/game.css
@@ -115,3 +115,15 @@ form {
 .main-btn:hover     {
     background-color: #2E5E33;
 }
+
+/*Quiz*/
+
+.quiz-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25vh;
+    margin: 0;
+    text-align: center;
+    flex-direction: column;
+}
