--- a/templates/words_table.html
+++ b/templates/words_table.html
@@ -64,6 +64,7 @@
                 <th>Word</th>
                 <th>Meaning</th>
                 <th>Example Sentence</th>
+                <th>Translation</th>
             </tr>
         </thead>
         <tbody>
@@ -73,6 +74,7 @@
                 <td>{{ word.word }}</td>
                 <td>{{ word.meaning }}</td>
                 <td>{{ word.example }}</td>
+                <td>{{ word.translation }}</td>
             </tr>
             {% endfor %}
         </tbody>
