add stories & articles page

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,8 @@
             <button class="main-btn">Language Quiz</button></a>
         <a href="{{ url_for('words_table') }}">
             <button class="main-btn">Words Table</button></a>
+        <a href="{{ url_for('stories') }}">
+            <button class="main-btn">Stories & Articles</button></a>
     </div>
 
     <!-- Filters and Sorting Form -->
